--- a/index.html
+++ b/index.html
@@ -29,9 +29,54 @@
     </style>
   </head>
   <body>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who
-    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
-    / 100 Visual 72 / 100 Continue
+    <header>
+      <p class="result">Your Result</p>
+      <div class="rounded">
+        <p class="value">76</p>
+        <p class="of-value">of 100</p>
+      </div>
+      <div class="status">
+        <h1>Great</h1>
+        <p>
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <h3>Summary</h3>
+        <div class="card red">
+          <div class="card-img">
+            <img src="assets/images/icon-reaction.svg" alt="" />
+            <h3 class="card-title">Reaction</h3>
+          </div>
+
+          <p class="card-value">80 / 100</p>
+        </div>
+        <div class="card yellow">
+          <div class="card-img">
+            <img src="assets/images/icon-memory.svg" alt="" />
+          </div>
+          <h3 class="card-title">Memory</h3>
+          <p class="card-value">92 / 100</p>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="assets/images/icon-verbal.svg" alt="" />
+          </div>
+          <h3 class="card-title">Verbal</h3>
+          <p class="card-value">61 / 100</p>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="assets/images/icon-verbal.svg" alt="" />
+          </div>
+          <h3 class="card-title">Visual</h3>
+          <p class="card-value">72 / 100</p>
+        </div>
+        <button class="btn" type="submit">Continue</button>
+      </div>
+    </main>
 
     <div class="attribution">
       Challenge by
